# utxo-workshop

./: README.md
node/: Cargo.toml
node/sha3pow/: Cargo.toml
node/sha3pow/src/: lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: block_author.rs  difficulty.rs  lib.rs  utxo.rs
